fix: fix puppy overflowing from footer

--- a/shelter/assets/styles/globals.css
+++ b/shelter/assets/styles/globals.css
@@ -320,7 +320,7 @@ a {
     }
 
     .footer {
-      height: 809px;
+      height: fit-content;
       padding: 10% 3% 0 3%;
     }
 
@@ -374,6 +374,7 @@ a {
       height: auto;
       min-width: 260px;
       margin: 0;
+      margin-top: 13%;
       width: 45%;
 
       align-self: center;
