--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -448,6 +448,7 @@ body {
 
   .about-content-wrapper {
     width: fit-content;
+    max-width: 500px;
     padding: 13.6% 7.8% 7% 7.8%;
   }
 
